tests/failing/01-does-not-support-unit-struct.rs
//! Only structures and tuple structures are supported.
//! Unit structs are not supported.

use derive_state::State;

#[derive(State)]
pub struct MyState;

fn main() {}
